@@ -6,6 +6,7 @@ WildcardX: *BOTS* Added new bots command, "#bot giveitem". This command lets you
 WildcardX: *BOTS* Added new commands, "#bot camp" and "#bot camp all". The first orders your bots to camp out if you target them. The second orders all bots you own to camp out, no need to target each.
 Trevius: Created methods for when an NPC is spawned to clean up the NPC code some.
 WildcardX: *BOTS* Fixed a bug caused by using #bot giveitem that didn't update the client that the iyem that was on the cursor is now gone.
+WildcardX: *BOTS* Fixed a bug that crash the client when trading with a bot.
 
 ==08/08/2009==
 WildcardX: *BOTS* More code refactoring.
